[tool.poetry]
name = "imageswapper"
version = "1.0.0"
description = "Small script to swap images with a folder of images, matching the size of the ones it's replacing"
authors = ["James <plyrthn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.2.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imageSwapper = 'imageSwapper.main:main'